adding native eth withdrawal to native bridge

--- a/bridge/native/package.json
+++ b/bridge/native/package.json
@@ -1,8 +1,11 @@
 {
   "name": "hardhat-project",
-  "devDependencies": {
+  "dependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.4",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "ethers": "^6.7.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3"
   }
 }
